memperbaiki bug ketika dikecilkan, tampilan home overlap dengan container hobi

--- a/assets/style.css
+++ b/assets/style.css
@@ -82,22 +82,37 @@ body > header {
     align-items: center;
 }
 #home{
-    height: 80vh;
+    /* height: 80vh;
+    padding-top: 50px;
+    padding-bottom: 50px;
     display: flex;
     justify-content: center;
     margin-inline: auto;
     flex: 1;
     display: flex;
-    align-items: center ;
+    align-items: center ; */
 }
 .container{
-    margin-right: 100px;
+    /* margin-right: 100px;
     margin-left: 100px;
+    padding-top: 100px;
+    padding-bottom: 50px;
     text-align: center;
     flex: 1;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    flex-wrap: wrap; */
+    margin-right: 100px;
+    margin-left: 100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    text-align: center;
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 .container .content-image img {
     margin: auto;
@@ -188,16 +203,15 @@ body > header {
     text-align: center;
 }
 .galeri-col p{
-    margin-top: 25px;
+    margin-top: 12px;
     font-size: 1.2rem;
     line-height: 18px;
 }
 .galeri-col img{
-    width: 150px;    
+    width: 150px;
     border-radius: 25px;
 }
 .galeri-col h4{
-    margin-bottom: 15px;
     font-size: 29px;
     font-weight: 600;
 }
@@ -300,7 +314,7 @@ footer p{
     background-color: white;
     box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
     border-radius: 4px;
-    padding: 32px 24px;
+    padding: 50px 24px;
     margin: 12px;
     text-decoration: none;
     z-index: 0;
@@ -386,14 +400,13 @@ footer p{
         height: 85vh;
     }
     .container{
-        margin-top: 220px;
         margin-right: 50px;
         margin-left: 50px;
         flex-direction: column;
     }
     .logo img{
         margin-top: 50px;
-        width: 50%;
+        width: 150px;
     }
     .home-text{
         margin-top: 50px;
